# whooing-mcp-server

./: .env.example  .gitignore  ARCHIVED.md  CHANGELOG.md  DESIGN.md  Makefile  README.md  pyproject.toml
attachments/: README.md
examples/: claude_desktop_config.json
src/whooing_mcp/: __init__.py  annotations.py  attachments.py  client.py  dates.py  p4_sync.py  queue.py  server.py
src/whooing_mcp/csv_adapters/: __init__.py  base.py  hyundai_card.py  kookmin_card.py  samsung_card.py  shinhan_card.py
src/whooing_mcp/html_adapters/: __init__.py  base.py  hanacard_secure_mail.py  hyundaicard_secure_mail.py
src/whooing_mcp/parsers/sms/: __init__.py
src/whooing_mcp/pdf_adapters/: __init__.py  hyundai_card.py  shinhan_card.py
src/whooing_mcp/tools/: annotations.py  attachments.py  audit.py  html_import.py  pdf_import.py  pending.py  reconcile.py
tests/: _decrypt_hanacard_html.py  test_annotations.py  test_attachments.py  test_csv_adapters.py  test_dates.py  test_html_import.py  test_hyundaicard_secure_mail.py  test_p4_sync.py  test_pdf_adapters.py  test_pdf_import.py  test_queue.py  test_sms_parsers.py
