[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whooing-mcp-server-wrapper"
version = "0.1.12"
description = "Wrapper MCP server for Whooing — complementary tools on top of official whooing.com/mcp. Provides SMS/email parsing, audit, dedup, CSV/PDF reconcile, category learning, local pending queue."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Woojin Kim", email = "me@woojinkim.org" }]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "rapidfuzz>=3",
    "pdfplumber>=0.11",
    "beautifulsoup4>=4.12",
    "playwright>=1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "reportlab>=4",  # tests/_make_pdf_fixture.py — fixture 재생성 시만 필요
]

[project.scripts]
whooing-mcp = "whooing_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whooing_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
