[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whooing-mcp-server-wrapper"
version = "0.2.0"
description = "Wrapper MCP server for Whooing — complementary tools on top of official whooing.com/mcp. Provides SMS/email parsing, audit, dedup, CSV/PDF reconcile, category learning, local pending queue."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Woojin Kim", email = "me@woojinkim.org" }]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "rapidfuzz>=3",
    # 어댑터 / 첨부 storage / db schema 는 whooing-core 라이브러리로 분리됨.
    # 외부 contributor: git+ssh / git+https 로 가져옴.
    # 본 머신 dev: Makefile 이 `pip install -e ../whooing-tui/core` 먼저 실행 →
    # editable 모드로 우선. 본 spec 은 fallback / CI 용.
    "whooing-core @ git+https://github.com/neoocean/whooing-tui.git@main#subdirectory=core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "reportlab>=4",  # tests/_make_pdf_fixture.py — fixture 재생성 시만 필요
]

[project.scripts]
whooing-mcp = "whooing_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whooing_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
